fix: updated post fields
